--- a/src/iso-registry-client/src/main/webapp/WEB-INF/views/feedback.html
+++ b/src/iso-registry-client/src/main/webapp/WEB-INF/views/feedback.html
@@ -43,20 +43,9 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="text-center">
-<!--                        glyphicon-glyphicon-list-alt-->
                         <h3><i class="glyphicon glyphicon-list-alt" style="font-size:2em;"></i></h3>
-                        <h2 class="text-center">Feedback</h2>
-                        <p>Please feel free to send your thoughts about Geolexica, bug reports, or just kudos, through the form below. Thanks!</p>
-
-                        <!--div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item"
-                            src="https://docs.google.com/forms/d/170E_WUFkfeDUTHz37hO3tTwo4Vcu7hd4G53QyUdsL5U/viewform?embedded=true"></iframe>
-
-                       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv6B77NasVMxH0zFMxhHC-HPS-GsLR16oBBWcrooq9ANu97A/viewform?embedded=true"
-                       width="640" height="832" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-
-
-                        </div-->
+                        <h2 class="text-center">Provide feedback</h2>
+                        <p>Please provide your feedback in the form below. Thanks!</p>
 
                         <div class="iframe-container">
                             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScv6B77NasVMxH0zFMxhHC-HPS-GsLR16oBBWcrooq9ANu97A/viewform?embedded=true"
